[package]
name = "eink-image"
version = "0.2.0"
edition = "2021"
description = "A Rust utility for converting images to formats optimized for eink displays"
license = "MIT"
authors = ["Harper Reed <harper@nata2.org>"]
repository = "https://github.com/harperreed/eink-image"
homepage = "https://github.com/harperreed/eink-image"
documentation = "https://docs.rs/eink-image"
readme = "README.md"
keywords = ["eink", "image", "dithering", "embedded", "epaper"]
categories = ["graphics", "multimedia::images", "embedded"]
rust-version = "1.70"

[dependencies]
image = "0.24"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
